turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: Boolean does not take parameters
   else (getCouleurSol()==Color.black) {
                                       ^